--- a/public/custom-bootstraps.css
+++ b/public/custom-bootstraps.css
@@ -94,13 +94,15 @@ img {
 .ml-auto {
     margin-left: auto !important;
 }
-.ml-1 {
-    margin-left: 0.25rem !important;
-}
 .ml-2 {
     margin-left: 0.5rem !important;
 }
-.mr-1 {
+.ml-1,
+.mx-1 {
+    margin-left: 0.25rem !important;
+}
+.mr-1,
+.mx-1 {
     margin-right: 0.25rem !important;
 }
 .mr-2 {
