--- a/src/components/delivery/delivery.scss
+++ b/src/components/delivery/delivery.scss
@@ -16,120 +16,166 @@ body > div {
     padding: 0;
 }
 
-.delivery__main {
+.main {
     background: #fff;
     padding: 1rem;
-    .delivery__title {
+    .title {
         font-size: 1rem;
         font-weight: bold;
         padding-bottom: 1rem;
         text-align: center;
     }
-    .delivery__inventory {
+    .inventory {
         position: relative;
         // padding-bottom: 1rem;
     }
-    .delivery__product--size,
-    .delivery__service,
-    .delivery__ghn--cod {
+    .product__add,
+    .product__size,
+    .service,
+    .cod,
+    .product__price--total {
         position: relative;
     }
+    .product__add {
+        .product__add--quantity {
+            img {
+                height: 17px;
+                width: 17px;
+                &:hover {
+                    transform: scale(1.1);
+                    cursor: pointer;
+                }
+            }
+            div {
+                font-size: 1.1rem;
+                margin: 0 5px;
+            }
+        }
+        .product__add--btn-add {
+            background: #fff;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
+            color: black;
+            margin-bottom: 1rem;
+            img {
+                height: 17px;
+                width: 17px;
+            }
+        }
+    }
 }
-.delivery__ghn--cod {
+.cod,
+.product__price--total {
     input {
         text-align: right;
     }
 }
-.delivery__fee--total {
+.fee__total {
     padding: 0 1rem;
 }
-.delivery__fee--total .option img {
+.fee__total .option img {
     width: 20px;
     height: 20px;
     cursor: pointer;
 }
-.delivery__fee--total .option p {
+.fee__total .option p {
     cursor: pointer;
 }
-.delivery__fee--total .option + .form-group {
+.fee__total .option + .form-group {
     height: 0;
     opacity: 0;
     margin: 0;
     transition: all 0.3s ease;
 }
-.delivery__fee--total .option + .form-group button {
+.fee__total .option + .form-group button {
     font-weight: bold;
 }
-.delivery__fee--total .option + .show-note {
+.fee__total .option + .show-note {
     height: initial;
     opacity: 1;
 }
-
 .delivery {
     input,
     select {
         margin-bottom: 1rem;
     }
 }
-
 textarea {
     height: 3rem;
 }
-// .input:focus,
-// textarea:focus,
-// select:focus {
-//   box-shadow: none;
-//   background: #eee;
-//   border: none !important;
-// }
 
-.btn-pill {
-    font-size: 0.9rem;
-    background: #0d6efd;
-    color: #ffffff;
-    height: 2rem;
-    outline: none;
-    border: none;
+.product__list {
+    background: #eaeaea;
+    padding: 5px;
     border-radius: 1rem;
-    -webkit-box-shadow: 0px 1px 3px rgba(126, 142, 177, 0.2);
-    box-shadow: 0 1px 3px rgba(126, 142, 177, 0.2);
-}
-
-
-
-
-.form-control-sm {
-    height: calc(1.5em + 0.5rem + 2px);
-    width: 100%;
-    padding: 0.25rem 0.5rem;
-    color: #000000;
-    font-size: 0.875rem;
-    line-height: 1.5;
-    border-radius: 0.2rem;
-    /* border: 1px solid #ced4da; */
-    border: none;
-    // appearance: none;
-    background: #eee;
-    background-clip: padding-box;
-    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-    option {
-        background: #ffffff;
+    max-height: 150px;
+    line-height: 2rem;
+    overflow-y: scroll;
+    margin: 5px 0 10px 0;
+    &::-webkit-scrollbar {
+        /* Chrome, Safari and Opera*/
+        display: none;
     }
-    &:focus {
-        box-shadow: none;
-        background: #eee;
-        outline: none;
-        // border: none;
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+    .product__item {
+        background: white;
+        border-radius: 10px;
+        padding: 5px;
+        margin: 5px 0;
+        word-break: break-word;
+        &:hover {
+            img {
+                display: block;
+                cursor: pointer;
+            }
+        }
+    }
+    img {
+        display: none;
+        height: 1.5rem;
+        width: 1.5rem;
     }
 }
-.all__text--decoration {
-    text-align: center;
-    width: 100px;
-    position: absolute;
+.modal {
+    position: fixed;
     top: 0;
-    left: 50%;
-    transform: translate(-50%, -70%);
-    background: #fff;
-    font-size: 1rem;
-    color: #777777;
+    z-index: 999;
+    background: rgba(0, 0, 0, 0.7);
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .modal__btn--close {
+        text-align: right;
+        img {
+            height: 20px;
+            width: 20px;
+            &:hover {
+                cursor: pointer;
+            }
+        }
+    }
+    .modal__content {
+        p {
+            color: #ffffff;
+            opacity: 1;
+            font-size: 13px;
+            text-align: center;
+        }
+    }
+    .modal__msg {
+        background: #ffffff;
+        color: #000000;
+        width: 100%;
+        margin: 1rem;
+        padding: 1rem;
+        border-radius: 1rem;
+        textarea {
+            height: 3rem;
+        }
+    }
+}
+.order__address {
+    margin-bottom: 1rem;
 }
