--- a/src/components/delivery/delivery.html
+++ b/src/components/delivery/delivery.html
@@ -3,6 +3,31 @@
         <p class="title">Giao vận {{delivery_platform}}</p>
 
         <!-- address customer -->
+        <div class="order__id" v-if="delivery_platform=='GHTK'">
+            <hr>
+            <div class="all__text--decoration mb-0">Mã đơn hàng</div>
+            <div class="form-row">
+                <div class="col">
+                    <input class="form-control-sm" :class="{'validate-failed':validate_failed.order_id}" type="text"
+                        v-model="order_info.order_id" placeholder="Mã đơn">
+                </div>
+                <div class="order__switch col d-flex justify-content-start align-items-start">
+                    <div class="mx-2 mt-2">
+                        <div class="switch" :class="{'switch-on':switch_order_id}" @click="handleSwitch">
+                            <div class="circle" :class="{'circle-on':switch_order_id}"></div>
+                        </div>
+                    </div>
+                    <div class="mt-2">
+                        <div class="d-flex" v-if="switch_order_id">
+                            <p class="tooltip text-primary">Bật<span class="tooltip-top">Tự động tạo mã đơn</span></p>
+                        </div>
+                        <div class="d-flex" v-else>
+                            <p class="tooltip text-danger">Tắt<span class="tooltip-top">Tự nhập mã đơn</span></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="inventory">
             <hr>
             <div class="all__text--decoration mb-0">Kho hàng</div>
@@ -18,16 +43,23 @@
                     </select>
                 </div>
             </div>
-        </div>
-        <div v-if="delivery_platform=='GHTK'">
-            <div class="form-row">
-                <div class="row">
-                    <input class="form-control-sm" :class="{'validate-failed':validate_failed.order_id}" type="text"
-                        v-model="order_info.order_id" placeholder="Mã đơn">
+            <!-- VTP sender email -->
+            <div class="form-row" v-if="!payload.store_email&&delivery_platform=='VIETTEL_POST'">
+                <div class="col">
+                    <input class="form-control-sm" :class="{'validate-failed':validate_failed.sender_email}" type="text"
+                        placeholder="Email bên gửi..." v-model="order_info.sender_email" @change="handleSaveInfo">
+                    <div class="d-flex justify-content-end align-items-center">
+                        <input class="m-0 mr-2" id="checkbox__save--email" type="checkbox" v-model="option_save_info"
+                            @change="handleSaveInfo">
+                        <label for="checkbox__save--email">Lưu email</label>
+                    </div>
                 </div>
             </div>
         </div>
-        <!-- GHTK mã đơn hàng -->
+        <div style="position: relative;">
+            <hr>
+            <div class="all__text--decoration mb-0">Khách hàng</div>
+        </div>
         <div class="form-row">
             <div class="col">
                 <input v-model="order_info.receiver_name" type="text" class="form-control-sm"
@@ -70,16 +102,6 @@
         </div>
         <input v-model="order_info.receiver_street" type="text" class="form-control-sm"
             :class="{'validate-failed':validate_failed.receiver_street}" placeholder="Địa chỉ cụ thể" />
-        <!-- VTP sender email -->
-        <div class="form-row" v-if="!payload.store_email&&delivery_platform=='VIETTEL_POST'">
-            <div class="col">
-                <input class="form-control-sm" type="text" placeholder="Email bên gửi..."
-                    v-model="order_info.sender_email" @change="handleSaveInfo">
-                <input id="checkbox__save--email" type="checkbox" v-model="option_save_info" @change="handleSaveInfo">
-                <label for="checkbox__save--email">Lưu email</label>
-            </div>
-        </div>
-
         <!-- ---------------------------------- -->
         <div class="product__add">
             <hr>
@@ -98,9 +120,10 @@
                 </div>
             </div>
             <div class="form-row mt-3">
-                <div class="col-9" v-if="delivery_platform=='GHTK'">
-                    <input class="form-control-sm" type="number" min="0" title="Khối lượng (g)"
+                <div class="col-9 tooltip" v-if="delivery_platform=='GHTK'">
+                    <input class="form-control-sm text-center" type="number" min="0" title="Khối lượng (gram)"
                         v-model="product.weight">
+                    <span class="tooltip-top">Khối lượng (gram)</span>
                 </div>
                 <div class="col-9" v-else></div>
             </div>
@@ -121,7 +144,7 @@
                 <div class="product__item d-flex justify-content-between align-items-center"
                     v-for="(product,index) in list_product" :key="index">
                     <div>{{product.name}} -
-                        <span v-if="product.weight">Khối lượng: {{product.weight}} g -</span>
+                        <span v-if="product.weight">Khối lượng: {{product.weight}} Kg -</span>
                         Số lượng: {{product.quantity}}</div>
                     <img src="@/assets/delete.png" alt="" @click="handleDelProduct(index)">
                 </div>
@@ -133,13 +156,13 @@
             <p class="all__text--decoration mb-0">Kích thước</p>
             <div class="form-row">
                 <div class="col tooltip">
-                    <input v-model="order_info.weight" type="number" class="form-control-sm"
+                    <input v-model="order_info.weight" type="number" class="form-control-sm text-center"
                         :class="{'validate-failed':validate_failed.weight}" placeholder="Cân nặng (gram)"
                         title="Cân nặng (gram)" @keyup="handleWeightTimeout" />
                     <span class="tooltip-top">Cân nặng (gram)</span>
                 </div>
                 <div class="col tooltip" v-if="delivery_platform=='VIETTEL_POST'||delivery_platform=='GHN'">
-                    <input v-model="order_info.length" type="number" class="form-control-sm"
+                    <input v-model="order_info.length" type="number" class="form-control-sm text-center"
                         :class="{'validate-failed':validate_failed.length}" placeholder="Chiều dài (cm)"
                         @keyup="handleSizeTimeout" />
                     <span class="tooltip-top">Chiều dài (cm)</span>
@@ -147,13 +170,13 @@
             </div>
             <div class="form-row" v-if="delivery_platform=='VIETTEL_POST'||delivery_platform=='GHN'">
                 <div class="col tooltip">
-                    <input v-model="order_info.width" type="number" class="form-control-sm"
+                    <input v-model="order_info.width" type="number" class="form-control-sm text-center"
                         :class="{'validate-failed':validate_failed.width}" placeholder="Chiều rộng (cm)"
                         @keyup="handleSizeTimeout" />
                     <span class="tooltip-bottom">Chiều rộng (cm)</span>
                 </div>
                 <div class="col tooltip">
-                    <input v-model="order_info.height" type="number" class="form-control-sm"
+                    <input v-model="order_info.height" type="number" class="form-control-sm text-center"
                         :class="{'validate-failed':validate_failed.height}" placeholder="Chiều cao (cm)"
                         @keyup="handleSizeTimeout" />
                     <span class="tooltip-bottom">Chiều cao (cm)</span>
@@ -259,8 +282,8 @@
                 <div class="col">
                     <input id="input-cod" class="form-control-sm" v-model="order_info.cod_amount" type="text"
                         placeholder="Tiền thu hộ COD" title="Tiền thu hộ COD"
-                        @change="checkKeyBoard('input-cod',$event,formatNumberCod($event.target.value))"
-                        @keyup="checkKeyBoard('input-cod',$event,formatNumberCod($event.target.value))" />
+                        @change="checkKeyBoard('input-cod',$event,formatNumberCod,order_info.cod_amount)"
+                        @keyup="checkKeyBoard('input-cod',$event,formatNumberCod,order_info.cod_amount)" />
                 </div>
             </div>
         </div>
