--- a/public/custom-bootstraps.css
+++ b/public/custom-bootstraps.css
@@ -42,7 +42,14 @@ img {
 *::after {
   box-sizing: border-box;
 }
-
+.row{
+    display:-ms-flexbox;
+    display:flex;
+    -ms-flex-wrap:wrap;
+    flex-wrap:wrap;
+    /* margin-right:-15px;
+    margin-left:-15px */
+}
 .d-flex {
     display: flex !important;
 }
