--- a/src/components/infoOrder/infoOrder.scss
+++ b/src/components/infoOrder/infoOrder.scss
@@ -12,39 +12,56 @@
     padding: 0;
     border-radius: 15px 15px 0 0;
     .close {
-      // position: absolute;
-      background: silver;
-      // top: 10px;
-      // right: 10px;
-      opacity: 1;
-      border-radius: 50%;
-      padding: 0.5rem;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      &:hover {
-          cursor: pointer;
-          opacity: 1 !important;
-          transform: scale(1.1);
-      }
-      &:focus {
-          outline: none;
-      }
-      img {
-          width: 10px;
-          height: 10px;
-      }
-  }
-  }
-  
-  .order-info::-webkit-scrollbar {
+        // position: absolute;
+        background: silver;
+        // top: 10px;
+        // right: 10px;
+        opacity: 1;
+        border-radius: 50%;
+        padding: 0.5rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        &:hover {
+            cursor: pointer;
+            opacity: 1 !important;
+            transform: scale(1.1);
+        }
+        &:focus {
+            outline: none;
+        }
+        img {
+            width: 6px;
+            height: 6px;
+        }
+    }
+    .info-title {
+        margin: 20px 0 20px 20px;
+    }
+    .info-content {
+        margin: 0 16px;
+        .info-order-price {
+            color: #eb5757;
+            font-weight: 600;
+        }
+        div{
+            margin-bottom: 8px;
+        }
+    }
+    .close__btn--order {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+    }
+}
+
+.order-info::-webkit-scrollbar {
     display: none;
-  }
-  .show-order-info {
+}
+.show-order-info {
     bottom: 0;
     max-height: 90vh;
     overflow-y: scroll;
     height: initial;
     opacity: 1;
-    padding: 10px;
-  }
+}
