--- a/src/components/delivery/delivery.scss
+++ b/src/components/delivery/delivery.scss
@@ -94,7 +94,7 @@ textarea {
 .modal {
     position: fixed;
     top: 0;
-    z-index: 999;
+    z-index: 99;
     background: rgba(0, 0, 0, 0.7);
     height: 100%;
     width: 100%;
@@ -120,14 +120,15 @@ textarea {
         }
     }
     .modal__msg {
+        position: relative;
         background: #ffffff;
         color: #000000;
         width: 100%;
-        margin: 1rem;
-        padding: 1rem;
-        border-radius: 1rem;
+        margin: 9px;
+        padding: 0 12px 20px;
+        border-radius: 4px;
         textarea {
-            height: 3rem;
+            height: 50px;
         }
     }
 }
