--- a/src/components/delivery/delivery.scss
+++ b/src/components/delivery/delivery.scss
@@ -1,9 +1,22 @@
+$colorAccent: #ff5f0b;
 body::-webkit-scrollbar {
     display: none;
 }
 .disable-scroll {
     overflow: hidden;
     height: 100vh;
+}
+.affiliate {
+    button {
+        width: 35%;
+        background: #fff;
+        border: 1px solid $colorAccent;
+        color: $colorAccent;
+        margin-left: 12px;
+    }
+    input{
+        cursor: help;
+    }
 }
 .delivery {
     .main {
